# ForgeGameEngine

./: .gitignore  BuildAndRun.sh  BuildGLFW.sh  CMakeLists.txt  README.md
Dependencies/Include/glad/: glad.h
Dependencies/Source/: glad.c
Headers/: Camera.h  DirectionalLight.h  EBO.h  ForgeEngine.h  Material.h  PointLight.h  ShaderProgram.h  SpotLight.h  Texture2D.h  VAO.h  VBO.h
Resources/Shaders/: default.FS  default.VS
Source/: Camera.cpp  DirectionalLight.cpp  EBO.cpp  ForgeEngine.cpp  Main.cpp  Materal.cpp  PointLight.cpp  ProgramStateUpdater.cpp  ShaderProgram.cpp  SpotLight.cpp  Texture2D.cpp  VAO.cpp  VBO.cpp
